--- a/banks-front/src/App.css
+++ b/banks-front/src/App.css
@@ -18,3 +18,16 @@
   color: #61dafb;
 }
 
+a:link, a:visited {
+  background-color: #2f8fe9;
+  color: white;
+  padding: 0px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: rgb(0, 89, 255);
+}
+
