shorthand op routing, op accounts and transactions

--- a/banks-front/src/index.css
+++ b/banks-front/src/index.css
@@ -13,6 +13,11 @@ code {
     monospace;
 }
 
+a.bank-selection {
+  background-color: #ffffff;
+  text-decoration: none;
+}
+
 a.bank-selection:visited {
   background-color: #ffffff;
   text-decoration: none;
